fix(googlecharts): use Arrays.asList instead of List.of for null values