@@ -1,6 +1,8 @@
 package com.webforj.samples.views.googlecharts.types;
 
 import com.webforj.component.googlecharts.GoogleChart;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -11,7 +13,7 @@ public class GanttChart {
   private final GoogleChart chart = new GoogleChart(GoogleChart.Type.GANTT);
 
   public GanttChart() {
-    
+
     Map<String, Object> options = Map.of(
         TITLE, "Project Schedule",
         "gantt", Map.of(
@@ -25,23 +27,23 @@ public class GanttChart {
     chart.setOptions(options);
 
     List<Object> data = List.of(
-        List.of("Task ID", "Task Name", 
-            Map.of("type", "date", LABEL, "Start Date"), 
-            Map.of("type", "date", LABEL, "End Date"), 
-            Map.of("type", "number", LABEL, "Duration"), 
-            Map.of("type", "number", LABEL, "Percent Complete"), 
+        List.of("Task ID", "Task Name",
+            Map.of("type", "date", LABEL, "Start Date"),
+            Map.of("type", "date", LABEL, "End Date"),
+            Map.of("type", "number", LABEL, "Duration"),
+            Map.of("type", "number", LABEL, "Percent Complete"),
             Map.of("type", "string", LABEL, "Dependencies")
         ),
-        List.of(
+        Arrays.asList(
             "Research", "Find Topics", "Date(2022, 0, 1)", "Date(2022, 0, 3)", null, 100, null
         ),
-        List.of(
+        Arrays.asList(
             "Write", "Draft Outline", "Date(2022, 0, 4)", "Date(2022, 0, 6)", null, 25, "Research"
         ),
-        List.of(
+        Arrays.asList(
             "Review", "Revise Draft", "Date(2022, 0, 7)", "Date(2022, 0, 9)", null, 0, "Write"
         ),
-        List.of(
+        Arrays.asList(
             "Finalize", "Complete Article", "Date(2022, 0, 10)", "Date(2022, 0, 12)", null, 0, "Review"
         )
     );
